# autoresearch-muon

./: README.md  prepare.py  prepare_mlx.py  program.md  pyproject.toml  train.py  train_mlx.py
